--- a/kitty-admin/pom.xml
+++ b/kitty-admin/pom.xml
@@ -20,6 +20,8 @@
         <maven.compiler.target>8</maven.compiler.target>
         <mybatis.spring.version>2.1.3</mybatis.spring.version>
         <swagger.version>2.9.2</swagger.version>
+        <druid.version>1.1.10</druid.version>
+        <log4j.version>1.2.17</log4j.version>
     </properties>
 
     <dependencies>
@@ -60,6 +62,18 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
             <version>${swagger.version}</version>
+        </dependency>
+        <!-- druid -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>${druid.version}</version>
+        </dependency>
+        <!-- log4j -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
         </dependency>
     </dependencies>
 
