增加kitty-common模块，含反射工具类、kitty-core模块，含请求统一返回结果和pageHelper相关类，增加kitty-admin模块全部的controller、service、impl，并增加字典管理和用户管理分页查询

--- a/kitty-admin/pom.xml
+++ b/kitty-admin/pom.xml
@@ -3,14 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>kitty-mouduls</artifactId>
+        <artifactId>kitty</artifactId>
         <groupId>com.luqiyu</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>kitty-admin</artifactId>
-    <version>1.0</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
     <name>kitty-admin</name>
     <description>kitty-admin</description>
@@ -74,6 +74,12 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>${log4j.version}</version>
+        </dependency>
+        <!-- kitty-core -->
+        <dependency>
+            <groupId>com.luqiyu</groupId>
+            <artifactId>kitty-core</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 
