--- a/kitty-admin/src/main/resources/log4j.properties
+++ b/kitty-admin/src/main/resources/log4j.properties
@@ -1,33 +1,15 @@
-### set log levels ###    
-log4j.rootLogger = INFO, console, infoFile, errorFile ,debugfile 
-LocationInfo=true    
+log4j.rootLogger=DEBUG, stdout, logfile
 
-log4j.appender.console = org.apache.log4j.ConsoleAppender  
-log4j.appender.console.Target = System.out  
-log4j.appender.console.layout = org.apache.log4j.PatternLayout 
+log4j.category.org.springframework=ERROR
+log4j.category.org.apache=INFO
 
-log4j.appender.console.layout.ConversionPattern =[%d{yyyy-MM-dd HH:mm:ss,SSS}]-[%p]:%m   %x %n 
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - %m%n
 
-log4j.appender.infoFile = org.apache.log4j.DailyRollingFileAppender  
-log4j.appender.infoFile.Threshold = INFO  
-log4j.appender.infoFile.File = F:/\u5B66\u4E60java/logs/log
-log4j.appender.infoFile.DatePattern = '.'yyyy-MM-dd'.log'  
-log4j.appender.infoFile.Append=true
-log4j.appender.infoFile.layout = org.apache.log4j.PatternLayout  
-log4j.appender.infoFile.layout.ConversionPattern =[%d{yyyy-MM-dd HH:mm:ss,SSS}]-[%p]:%m  %x %n 
-
-log4j.appender.errorFile = org.apache.log4j.DailyRollingFileAppender  
-log4j.appender.errorFile.Threshold = ERROR  
-log4j.appender.errorFile.File = F:/\u5B66\u4E60java/logs/error  
-log4j.appender.errorFile.DatePattern = '.'yyyy-MM-dd'.log'  
-log4j.appender.errorFile.Append=true  
-log4j.appender.errorFile.layout = org.apache.log4j.PatternLayout  
-log4j.appender.errorFile.layout.ConversionPattern =[%d{yyyy-MM-dd HH:mm:ss,SSS}]-[%p]:%m  %x %n
-
-log4j.appender.debugfile = org.apache.log4j.DailyRollingFileAppender  
-log4j.appender.debugfile.Threshold = DEBUG  
-log4j.appender.debugfile.File = F:/\u5B66\u4E60java/logs/debug  
-log4j.appender.debugfile.DatePattern = '.'yyyy-MM-dd'.log'  
-log4j.appender.debugfile.Append=true  
-log4j.appender.debugfile.layout = org.apache.log4j.PatternLayout  
-log4j.appender.debugfile.layout.ConversionPattern =[%d{yyyy-MM-dd HH:mm:ss,SSS}]-[%p]:%m  %x %n
+log4j.appender.logfile=org.apache.log4j.RollingFileAppender
+log4j.appender.logfile.File=F:/logs/log.log4j
+log4j.appender.logfile.MaxFileSize=512KB
+log4j.appender.logfile.MaxBackupIndex=5
+log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
+log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - %m%n
